[package]
name = "ji"
version = "0.1.0"
edition = "2021"
exclude = ["/frontend/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing-subscriber = "0.3.17"
